# github_notify

./: Cargo.toml  LICENSE  README.md
src/: main.rs
